labs/troubleshooting/solution/ckad/dns-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns-debug
spec:
  containers:
  - name: debug
    image: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
