labs/troubleshooting/solution/ckad/init-container-failing-fixed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-container-failing-fixed
  labels:
    app: troubleshooting-demo
    scenario: init-container
spec:
  containers:
  - name: app
    image: nginx
    ports:
    - containerPort: 80
