labs/troubleshooting/solution/ckad/netpol-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netpol-debug
  namespace: netpol-test
  labels:
    app: debug
spec:
  containers:
  - name: debug
    image: nicolaka/netshoot
    command: ["/bin/sh", "-c", "sleep 3600"]
